# GameCollections

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: cpack.cmake  dependencies.cmake
dependencies/: CMakeLists.txt
project/: CMakeLists.txt
src/: CMakeLists.txt
src/PingPong/: CMakeLists.txt
src/PingPong/sources/: AI.cpp  AI.h  Ball.cpp  Ball.h  Paddle.cpp  Paddle.h  Score.cpp  Score.h  main.cpp  pch.h
